--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Check | Use esp toolchain
         run: rustup default esp
+      - name: Check | Espflash
+        run: espflash --version
       - name: Build | Cargo build
         run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo build
+      - name: Build | Extract firmware file
+        run: espflash ./target/xtensa-esp32-espidf/debug/rust-esp32-std-demo save-image esp32 ./target/xtensa-esp32-espidf/debug/rust-esp32-std-demo firmware.bin
       - name: Debug | Show and tell
         run: ls ./target/xtensa-esp32-espidf/debug
 
