--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Check | Use esp toolchain
         run: rustup default esp
+      - name: Install | Espflash
+        run: cargo install espflash
       - name: Check | Espflash
         run: espflash --version
       - name: Build | Cargo build
