--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install | Packages
         run: sudo apt-get install -y git curl gcc ninja-build cmake libudev-dev python3 python3-pip libusb-1.0-0 libssl-dev pkg-config libtinfo5
+      - name: Install | Rust toolchain
+        run: sudo su -c "bash <(wget -qO- https://github.com/esp-rs/rust-build/blob/main/install-rust-toolchain.sh)"
       - name: Check | Use esp toolchain
         run: rustup default esp
       - name: Install | Espflash
