--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,31 +26,10 @@ jobs:
         run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo espflash save-image firmware.bin
       - name: Debug | Show and tell
         run: ls -al
-      # - name: Build | Extract firmware file
-      #  run: cargo espflash ./target/xtensa-esp32-espidf/debug/rust-esp32-std-demo save-image esp32 ./target/xtensa-esp32-espidf/debug/rust-esp32-std-demo firmware.bin      
-      # - uses: "marvinpinto/action-automatic-releases@latest"
-      #   with:
-      #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
-      #     prerelease: false
-      #     title
-      #     files: |
-      #       LICENSE.txt
-      #       *.jar
-
-      # - name: Setup | Rust
-      #   uses: actions-rs/toolchain@v1
-      #   with:
-      #     toolchain: ${{ env.rust_toolchain }}
-      #     components: rustfmt, clippy
-      # - name: Setup | Std
-      #   run: rustup component add rust-src --toolchain ${{ env.rust_toolchain }}-x86_64-unknown-linux-gnu
-      # - name: Setup | Default to nightly
-      #   run: rustup default ${{ env.rust_toolchain }}
-      # - name: Setup | ldproxy
-      #   run: cargo install ldproxy
-      # - name: Build | Fmt Check
-      #   run: cargo fmt -- --check
-      # - name: Build | Clippy
-      #   run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo clippy --no-deps --target riscv32imc-esp-espidf -- -Dwarnings
-      # - name: Build | Compile
-      #   run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo build --target riscv32imc-esp-espidf
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          title: "Test firmware build"
+          files: |
+            firmware.bin
