--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - ci
 
-# env:
-#   rust_toolchain: nightly-x86_64-unknown-linux-gnu
-#   esp_rust_toolchain: https://raw.githubusercontent.com/esp-rs/rust-build/main/install-rust-toolchain.sh
-
 jobs:
   compile:
     name: Build
@@ -17,6 +13,7 @@ jobs:
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
+      - uses: "bakery/actions-cargo-get-version"
       - name: Configure | Esp toolchain
         run: rustup default esp
       - name: Build | Cargo
