--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
-      - uses: "bakery/actions-cargo-get-version"
+      - uses: "bakery/actions-cargo-get-version@v1"
       - name: Configure | Esp toolchain
         run: rustup default esp
       - name: Build | Cargo
