--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Output Run Attempt
         run: echo ${{ github.run_attempt }}
       - name: Save Run ID
-        run: echo "${{ github.run_number }}" >> version-data.txt
+        run: echo "${{ github.run_id }}" >> version-data.txt
       - name: Add and commit
         run: git add version-data.txt
       - name: Add and commit
-        run: git commit "update build number to ${{ github.run_number }}"
+        run: git commit -m "update build number to ${{ github.run_id }}"
       - name: Push
         run: git push origin $env:GITHUB_REF_NAME
       - name: Configure | Esp toolchain
