--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,17 +42,17 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
-      # - name: Configure | Esp toolchain
-      #   run: rustup default esp
-      # - name: Build | Cargo
-      #   run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo espflash save-image firmware-${{ steps.cargo-set-version.outputs.version }}.bin
-      # - name: Debug | Show and tell
-      #   run: ls -al
-      # - uses: "marvinpinto/action-automatic-releases@latest"
-      #   with:
-      #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
-      #     automatic_release_tag: "${{ steps.cargo-set-version.outputs.version }}"
-      #     prerelease: true
-      #     title: "Firmware build ${{ steps.cargo-set-version.outputs.version }}"
-      #     files: |
-      #       firmware-${{ steps.cargo-set-version.outputs.version }}.bin
+      - name: Configure | Esp toolchain
+        run: rustup default esp
+      - name: Build | Cargo
+        run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo espflash save-image firmware-${{ steps.cargo-set-version.outputs.version }}.bin
+      - name: Debug | Show and tell
+        run: ls -al
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "${{ steps.cargo-set-version.outputs.version }}"
+          prerelease: true
+          title: "Firmware build ${{ steps.cargo-set-version.outputs.version }}"
+          files: |
+            firmware-${{ steps.cargo-set-version.outputs.version }}.bin
