--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - ci
 
+env:
+  cargo_file_path: ./Cargo.toml
+
 jobs:
   compile:
     name: Build
@@ -14,27 +17,16 @@ jobs:
       - name: Setup | Checkout
         uses: actions/checkout@v2
       - uses: fregante/setup-git-user@v1.0.1
-      - name: Output Run ID
-        run: echo ${{ github.run_id }}
-      - name: Output Run Number
-        run: echo ${{ github.run_number }}
-      - name: Output Run Attempt
-        run: echo ${{ github.run_attempt }}
-      - name: Cargo | Get version
-        id: cargo-get-version
-        uses: "bakery/actions-cargo-get-version@v1.1"
-      - name: Debug | Show version
-        run: echo "Detected version is ${{ steps.cargo-get-version.outputs.version }}"
       - name: Cargo | Set version
         id: cargo-set-version
         uses: "bakery/actions-cargo-set-version@v1.4.0"
         with:
-          cargoFile: "./Cargo.toml"
+          cargoFile: "${{ env.cargo_file_path }}"
           version: "${{ github.run_number }}"
           buildNumberOnly: true
           overwriteCargoFile: true
       - name: Add and commit
-        run: git add Cargo.toml
+        run: git add ${{ env.cargo_file_path }}
       - name: Add and commit
         run: git commit -m "build ${{ steps.cargo-set-version.outputs.version }}"
       - name: Push changes
@@ -46,8 +38,6 @@ jobs:
         run: rustup default esp
       - name: Build | Cargo
         run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo espflash save-image firmware-${{ steps.cargo-set-version.outputs.version }}.bin
-      - name: Debug | Show and tell
-        run: ls -al
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
