--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,35 +3,46 @@ name: CI
 on:
   push:
     branches:
-      - main
-  pull_request:
-  schedule:
-    - cron: '50 6 * * *'
+      - ci
 
 env:
-  rust_toolchain: nightly-2022-04-07
+  cargo_file_path: ./Cargo.toml
 
 jobs:
   compile:
-    name: Compile
+    name: Build
     runs-on: ubuntu-latest
+    container: espressif/idf-rust-examples
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
-      - name: Setup | Rust
-        uses: actions-rs/toolchain@v1
+      - uses: fregante/setup-git-user@v1.0.1
+      - name: Cargo | Set version
+        id: cargo-set-version
+        uses: "bakery/actions-cargo-set-version@v1.4.0"
         with:
-          toolchain: ${{ env.rust_toolchain }}
-          components: rustfmt, clippy
-      - name: Setup | Std
-        run: rustup component add rust-src --toolchain ${{ env.rust_toolchain }}-x86_64-unknown-linux-gnu
-      - name: Setup | Default to nightly
-        run: rustup default ${{ env.rust_toolchain }}
-      - name: Setup | ldproxy
-        run: cargo install ldproxy
-      - name: Build | Fmt Check
-        run: cargo fmt -- --check
-      - name: Build | Clippy
-        run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo clippy --no-deps --target riscv32imc-esp-espidf -- -Dwarnings
-      - name: Build | Compile
-        run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo build --target riscv32imc-esp-espidf
+          cargoFile: "${{ env.cargo_file_path }}"
+          version: "${{ github.run_number }}"
+          buildNumberOnly: true
+          overwriteCargoFile: true
+      - name: Add and commit
+        run: git add ${{ env.cargo_file_path }}
+      - name: Add and commit
+        run: git commit -m "build ${{ steps.cargo-set-version.outputs.version }}"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
+      - name: Configure | Esp toolchain
+        run: rustup default esp
+      - name: Build | Cargo
+        run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo espflash save-image firmware-${{ steps.cargo-set-version.outputs.version }}.bin
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "${{ steps.cargo-set-version.outputs.version }}"
+          prerelease: true
+          title: "Firmware build ${{ steps.cargo-set-version.outputs.version }}"
+          files: |
+            firmware-${{ steps.cargo-set-version.outputs.version }}.bin
