--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
 
 env:
   cargo_file_path: ./Cargo.toml
+  wifi_ssid: ${{ secrets.RUST_ESP32_STD_DEMO_WIFI_SSID }}
+  wifi_password: ${{ secrets.RUST_ESP32_STD_DEMO_WIFI_PASS }}
 
 jobs:
   compile:
@@ -37,7 +39,7 @@ jobs:
       - name: Configure | Esp toolchain
         run: rustup default esp
       - name: Build | Cargo
-        run: export RUST_ESP32_STD_DEMO_WIFI_SSID=ssid; export RUST_ESP32_STD_DEMO_WIFI_PASS=pass; cargo espflash save-image firmware-${{ steps.cargo-set-version.outputs.version }}.bin
+        run: export RUST_ESP32_STD_DEMO_WIFI_SSID=${{ env.wifi_ssid }}; export RUST_ESP32_STD_DEMO_WIFI_PASS=${{ env.wifi_password }}; cargo espflash save-image firmware-${{ steps.cargo-set-version.outputs.version }}.bin --partition-table ./partitions.csv
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
