--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Configure | Esp toolchain
         run: rustup default esp
       - name: Build | Cargo
-        run: export RUST_ESP32_STD_DEMO_WIFI_SSID=${{ env.wifi_ssid }}; export RUST_ESP32_STD_DEMO_WIFI_PASS=${{ env.wifi_password }}; cargo espflash save-image firmware-${{ steps.cargo-set-version.outputs.version }}.bin -- --partition-table ./partitions.csv
+        run: export RUST_ESP32_STD_DEMO_WIFI_SSID=${{ env.wifi_ssid }}; export RUST_ESP32_STD_DEMO_WIFI_PASS=${{ env.wifi_password }}; cargo espflash --partition-table ./partitions.csv save-image firmware-${{ steps.cargo-set-version.outputs.version }}.bin
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
