--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
   compile:
     name: Build
     runs-on: ubuntu-latest
-    container: espressif/idf-rust-examples
+    container: sergiogasquez/esp-rs-env:esp32
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v2
