--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ jobs:
   compile:
     name: Build
     runs-on: ubuntu-latest
-    container: sergiogasquez/esp-rs-env:esp32
+    container: 
+      image: sergiogasquez/esp-rs-env:esp32
+      options: --user root
     steps:
       - name: Setup | Checkout
         uses: actions/checkout@v3
