--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           set-safe-directory: false
+      - name: Rust | Source stuff
+        run: source /home/esp/export-rust.sh
       - name: Debug | Toolchain
         run: rustup toolchain list
       - uses: fregante/setup-git-user@v1.0.1
