--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           set-safe-directory: false
-      - name: Rust | Source stuff
-        run: source /home/esp/export-rust.sh
+      - name: Rust | Debug
+        run: ls -al
       - name: Debug | Toolchain
         run: rustup toolchain list
       - uses: fregante/setup-git-user@v1.0.1
