--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup | Checkout
         uses: actions/checkout@v3
         with:
-          set-safe-directory: false
+          set-safe-directory: true
       - name: Rust | Debug
         run: ls -al
       - name: Debug | Toolchain
