--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: sergiogasquez/esp-rs-env:esp32
-      options: --user esp
+      options: --user 1000
     steps:
       # - name: Setup | Checkout
       #   uses: actions/checkout@v2
