--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       image: sergiogasquez/esp-rs-env:esp32
       options: --user esp
     steps:
-      - run: echo $GITHUB_WORKSPACE
+      - run: export $GITHUB_WORKSPACE=/home/esp/workspace
       - uses: actions/checkout@v3
         name: Setup | Checkout
         with:
