--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ env:
   cargo_file_path: ./Cargo.toml
   wifi_ssid: NOT_AN_SSID
   wifi_password: NOT_A_PASS
+  GITHUB_WORKSPACE: /home/esp/workspace
 
 jobs:
   compile:
@@ -18,7 +19,7 @@ jobs:
       image: sergiogasquez/esp-rs-env:esp32
       options: --user esp
     steps:
-      - run: export $GITHUB_WORKSPACE=/home/esp/workspace
+      - run: export GITHUB_WORKSPACE=/home/esp/workspace
       - uses: actions/checkout@v3
         name: Setup | Checkout
         with:
