--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,10 @@ jobs:
       image: sergiogasquez/esp-rs-env:esp32
       options: --user esp
     steps:
-      - run: export GITHUB_WORKSPACE=/home/esp/workspace
+      # - run: export GITHUB_WORKSPACE=/home/esp/workspace
+      - run: echo $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
         name: Setup | Checkout
-        with:
-          path: rust-esp32-demo
       - name: Debug | Toolchain
         run: rustup toolchain list
       - name: Debug | ls
