--- a/.github/actions/esp-build/Dockerfile
+++ b/.github/actions/esp-build/Dockerfile
@@ -6,7 +6,7 @@ USER root
 ENV RUSTUP_HOME=/home/esp/.rustup
 ENV CARGO_HOME=/home/esp/.cargo
 
-COPY LICENSE README.md /
+ENV PATH=/home/esp/.cargo/bin:$PATH
 
 COPY entrypoint.sh /entrypoint.sh
 
