--- a/.github/actions/esp-build/action.yml
+++ b/.github/actions/esp-build/action.yml
@@ -2,11 +2,10 @@ name: 'Container Action Template'
 description: 'Get started with Container actions'
 author: 'GitHub'
 inputs: 
-  myInput:
-    description: 'Input to use'
-    default: 'world'
+  command:
+    description: 'Command to run'
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.myInput }}
+    - ${{ inputs.command }}
